tests/should_fail/alloc_max_size.stderr
error: called non-ghost function `std::mem::size_of_val` in ghost context
 --> alloc_max_size.rs:8:17
  |
8 |         let _ = std::mem::size_of_val(&x);
  |                 ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

